# nospoil-subs

./: .gitignore  README.md  pyproject.toml
nospoil/: __init__.py  align.py  assgen.py  cli.py  fontembed.py  srtprep.py
tests/: test_core.py
